# Windows MinGW workarounds
if(WIN32)
  set(WINDOWS_SOURCES ../contrib/win32/stdlib.c)
  include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../contrib/win32")

  set(RC_COMMENT "${PACKAGE_NAME} library")
  set(RC_INTERNAL_NAME "libnfc")
  set(RC_ORIGINAL_NAME "libnfc.dll")
  set(RC_FILE_TYPE VFT_DLL)
  set(RC_FILE_FLAGS 0x0)
  if(LIBNFC_DEBUG_MODE)
    set(RC_FILE_FLAGS VS_FF_DEBUG)
  endif()
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../contrib/win32/version.rc.in" "${CMAKE_CURRENT_BINARY_DIR}/libnfc.rc" @ONLY)
  list(APPEND WINDOWS_SOURCES "${CMAKE_CURRENT_BINARY_DIR}/libnfc.rc")

  if(BUILD_SHARED_LIBS)
    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/../contrib/win32/libnfc.def.in" "${CMAKE_CURRENT_BINARY_DIR}/libnfc.def" @ONLY)
    list(APPEND WINDOWS_SOURCES "${CMAKE_CURRENT_BINARY_DIR}/libnfc.def")
  endif()
endif()

set(CHIPS_SOURCES)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/chips")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

set(LIBRARY_SOURCES
  nfc-internal.c
  ${DRIVERS_SOURCES}
  ${CHIPS_SOURCES}
  ${WINDOWS_SOURCES})

set(LIBNFC_EXPORTS_FILE "${CMAKE_SOURCE_DIR}/libnfc/libnfc.exports")
set(LIBNFC_VERSION_SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/libnfc.map")
if(EXISTS "${LIBNFC_EXPORTS_FILE}")
  file(STRINGS "${LIBNFC_EXPORTS_FILE}" LIBNFC_EXPORT_SYMBOLS)
endif()

if(LIBNFC_LOG)
  if(WIN32)
    list(APPEND LIBRARY_SOURCES log.cpp ../contrib/win32/libnfc/log-internal.c)
  else()
    list(APPEND LIBRARY_SOURCES log.cpp log-internal.c)
  endif()
endif()

set(LIBNFC_OPTIONAL_PRIVATE_INCLUDE_DIRS
  ${PCSC_INCLUDE_DIRS}
)
if(LIBNFC_NCI_FOUND)
  list(APPEND LIBNFC_OPTIONAL_PRIVATE_INCLUDE_DIRS ${LIBNFC_NCI_INCLUDE_DIRS})
endif()

add_library(nfc ${LIBRARY_SOURCES})
if(PROXIMATE_C_FFI)
  add_dependencies(nfc proximate_sys_build)
endif()

target_include_directories(nfc
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  PRIVATE
    "${CMAKE_SOURCE_DIR}"
    "${CMAKE_BINARY_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/chips"
    "${CMAKE_CURRENT_SOURCE_DIR}/buses"
    ${LIBNFC_OPTIONAL_PRIVATE_INCLUDE_DIRS})

set(LIBNFC_SHARED_LINK_LIBRARIES)
set(LIBNFC_STATIC_LINK_LIBRARIES)
set(LIBNFC_STATIC_POST_NFC_LINK_LIBRARIES)

if(PROXIMATE_C_FFI)
  list(APPEND LIBNFC_SHARED_LINK_LIBRARIES "${RUST_LIB_PATH}")
  list(APPEND LIBNFC_STATIC_LINK_LIBRARIES "${RUST_LIB_PATH}")
endif()

if(PCSC_FOUND)
  list(APPEND LIBNFC_SHARED_LINK_LIBRARIES ${PCSC_LIBRARIES})
  list(APPEND LIBNFC_STATIC_POST_NFC_LINK_LIBRARIES ${PCSC_LIBRARIES})
endif()

if(LIBNFC_NCI_FOUND)
  list(APPEND LIBNFC_SHARED_LINK_LIBRARIES ${LIBNFC_NCI_LIBRARIES})
  list(APPEND LIBNFC_STATIC_POST_NFC_LINK_LIBRARIES ${LIBNFC_NCI_LIBRARIES})
endif()

if(LIBRT_FOUND)
  list(APPEND LIBNFC_SHARED_LINK_LIBRARIES ${LIBRT_LIBRARIES})
  list(APPEND LIBNFC_STATIC_POST_NFC_LINK_LIBRARIES ${LIBRT_LIBRARIES})
endif()

if(WIN32)
  list(APPEND LIBNFC_SHARED_LINK_LIBRARIES wsock32)
  list(APPEND LIBNFC_STATIC_POST_NFC_LINK_LIBRARIES wsock32)
endif()

if(BUILD_SHARED_LIBS)
  target_link_libraries(nfc PRIVATE ${LIBNFC_SHARED_LINK_LIBRARIES})
  if(PROXIMATE_C_FFI)
    target_link_libraries(nfc PUBLIC $<BUILD_INTERFACE:${RUST_LIB_PATH}>)
    if(PCSC_FOUND)
      target_link_libraries(nfc PUBLIC $<BUILD_INTERFACE:${PCSC_LIBRARIES}>)
    endif()
  endif()
elseif(LIBNFC_STATIC_LINK_LIBRARIES OR LIBNFC_STATIC_POST_NFC_LINK_LIBRARIES)
  target_link_libraries(nfc INTERFACE
    $<BUILD_INTERFACE:${LIBNFC_STATIC_LINK_LIBRARIES}>
    $<BUILD_INTERFACE:$<TARGET_FILE:nfc>>
    $<BUILD_INTERFACE:${LIBNFC_STATIC_POST_NFC_LINK_LIBRARIES}>)
endif()

if(BUILD_SHARED_LIBS AND PCSC_LIBRARY_DIRS)
  target_link_directories(nfc PRIVATE ${PCSC_LIBRARY_DIRS})
endif()
if(BUILD_SHARED_LIBS AND LIBNFC_NCI_LIBRARY_DIRS)
  target_link_directories(nfc PRIVATE ${LIBNFC_NCI_LIBRARY_DIRS})
endif()

if(UNIX AND NOT APPLE AND BUILD_SHARED_LIBS)
  file(WRITE "${LIBNFC_VERSION_SCRIPT}" "LIBNFC_6 {\n  global:\n")
  foreach(symbol ${LIBNFC_EXPORT_SYMBOLS})
    file(APPEND "${LIBNFC_VERSION_SCRIPT}" "    ${symbol};\n")
  endforeach()
  file(APPEND "${LIBNFC_VERSION_SCRIPT}" "  local:\n    *;\n};\n")
  target_link_options(nfc PRIVATE "-Wl,--version-script=${LIBNFC_VERSION_SCRIPT}")
endif()

set_target_properties(nfc PROPERTIES
  OUTPUT_NAME nfc
  VERSION 6.0.0
  SOVERSION 6)

if(WIN32)
  set_target_properties(nfc PROPERTIES PREFIX lib)
endif()

if(WIN32 AND BUILD_SHARED_LIBS)
  if(MINGW)
    add_custom_command(
      OUTPUT libnfc.lib
      COMMAND ${DLLTOOL} -d "${CMAKE_CURRENT_BINARY_DIR}/libnfc.def" -l "${CMAKE_CURRENT_BINARY_DIR}/libnfc.lib" "${CMAKE_CURRENT_BINARY_DIR}/libnfc.dll"
      DEPENDS nfc "${CMAKE_CURRENT_BINARY_DIR}/libnfc.def")
    add_custom_target(win32lib ALL DEPENDS libnfc.lib)
  endif()
endif()

install(TARGETS nfc
  EXPORT LibNFCTargets
  RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT libraries
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT libraries
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT libraries)

if(WIN32 AND BUILD_SHARED_LIBS AND MINGW)
  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/libnfc.lib" DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT libraries)
endif()

if(NOT BUILD_SHARED_LIBS AND PROXIMATE_C_FFI)
  install(FILES "${RUST_LIB_PATH}" DESTINATION "${CMAKE_INSTALL_LIBDIR}" COMPONENT libraries)
endif()
