RUST_TARGET_DIR = $(abs_top_builddir)/rust/target
RUST_RELEASE_LIB = $(RUST_TARGET_DIR)/release/liblibnfc_rs.a

RUST_SOURCES = \
	libnfc-rs/build.rs \
	libnfc-rs/src/core.rs \
	libnfc-rs/src/lib.rs \
	libnfc-rs/src/lifecycle.rs

EXTRA_DIST = \
	libnfc-rs/Cargo.toml \
	$(RUST_SOURCES)

if WITH_ENVVARS
RUST_ENVVARS_FLAG = LIBNFC_RS_WITH_ENVVARS=1
else
RUST_ENVVARS_FLAG = LIBNFC_RS_WITH_ENVVARS=0
endif

if WITH_CONFFILES
RUST_CONFFILES_FLAG = LIBNFC_RS_WITH_CONFFILES=1
else
RUST_CONFFILES_FLAG = LIBNFC_RS_WITH_CONFFILES=0
endif

if WITH_LOG
RUST_LOG_FLAG = LIBNFC_RS_WITH_LOG=1
else
RUST_LOG_FLAG = LIBNFC_RS_WITH_LOG=0
endif

if WITH_DEBUG
RUST_DEBUG_FLAG = LIBNFC_RS_WITH_DEBUG=1
else
RUST_DEBUG_FLAG = LIBNFC_RS_WITH_DEBUG=0
endif

RUST_EXTERNAL_BRIDGES_FLAG = LIBNFC_RS_EXTERNAL_BRIDGES=1
RUST_ENABLED_DRIVERS =

if DRIVER_PCSC_ENABLED
RUST_ENABLED_DRIVERS += pcsc,
endif
if DRIVER_ACR122_PCSC_ENABLED
RUST_ENABLED_DRIVERS += acr122_pcsc,
endif
if DRIVER_ACR122_USB_ENABLED
RUST_ENABLED_DRIVERS += acr122_usb,
endif
if DRIVER_ACR122S_ENABLED
RUST_ENABLED_DRIVERS += acr122s,
endif
if DRIVER_PN53X_USB_ENABLED
RUST_ENABLED_DRIVERS += pn53x_usb,
endif
if DRIVER_ARYGON_ENABLED
RUST_ENABLED_DRIVERS += arygon,
endif
if DRIVER_PN532_UART_ENABLED
RUST_ENABLED_DRIVERS += pn532_uart,
endif
if DRIVER_PN532_SPI_ENABLED
RUST_ENABLED_DRIVERS += pn532_spi,
endif
if DRIVER_PN532_I2C_ENABLED
RUST_ENABLED_DRIVERS += pn532_i2c,
endif
if DRIVER_PN71XX_ENABLED
RUST_ENABLED_DRIVERS += pn71xx,
endif

RUST_ENABLED_DRIVERS_FLAG = LIBNFC_RS_ENABLED_DRIVERS=$(RUST_ENABLED_DRIVERS)

all-local: $(RUST_RELEASE_LIB)

$(RUST_RELEASE_LIB): libnfc-rs/Cargo.toml $(RUST_SOURCES)
	$(AM_V_GEN)cd $(top_srcdir)/rust/libnfc-rs && \
		$(RUST_ENVVARS_FLAG) $(RUST_CONFFILES_FLAG) $(RUST_LOG_FLAG) $(RUST_DEBUG_FLAG) $(RUST_EXTERNAL_BRIDGES_FLAG) $(RUST_ENABLED_DRIVERS_FLAG) \
		CARGO_TARGET_DIR=$(RUST_TARGET_DIR) $(CARGO) build --release $(RUST_CARGO_FEATURES)

if USE_RUST_NFC_SECURE
if USE_RUST_NFC_LIFECYCLE
if USE_RUST_NFC_CORE
RUST_CARGO_FEATURES = --features nfc_secure,nfc_lifecycle,nfc_core
else
RUST_CARGO_FEATURES = --features nfc_secure,nfc_lifecycle
endif
else
RUST_CARGO_FEATURES = --features nfc_secure
endif
else
if USE_RUST_NFC_LIFECYCLE
if USE_RUST_NFC_CORE
RUST_CARGO_FEATURES = --features nfc_lifecycle,nfc_core
else
RUST_CARGO_FEATURES = --features nfc_lifecycle
endif
else
RUST_CARGO_FEATURES =
endif
endif

clean-local:
	-rm -rf $(RUST_TARGET_DIR)
