[package]
name = "proximate-driver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
proximate-types = { path = "../proximate-types" }

[features]
default = ["lifecycle", "orchestration", "usb_helper"]
lifecycle = []
orchestration = ["lifecycle"]
usb_helper = []
pcsc_helper = []
nci_helper = ["orchestration"]
asan_tests = []
