[package]
name = "proximate-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
nusb = { version = "0.2", optional = true }
pcsc = { version = "2.9.0", optional = true }
rustix = { version = "1.1", default-features = false, features = ["std", "fs", "event", "termios", "time"] }

[features]
default = ["usb_helper"]
orchestration = []
usb_helper = ["dep:nusb"]
pcsc_helper = ["dep:pcsc"]
nci_helper = ["orchestration"]
