[package]
name = "proximate-sys"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "proximate_sys"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = "0.2"
proximate = { path = "../proximate", default-features = false }
proximate-platform = { path = "../proximate-platform", default-features = false }

[features]
default = ["secure", "lifecycle", "orchestration", "usb_helper"]
secure = []
lifecycle = ["proximate/lifecycle"]
orchestration = [
    "lifecycle",
    "proximate/orchestration",
    "proximate/usb_helper",
    "proximate-platform/orchestration",
]
usb_helper = ["proximate/usb_helper", "proximate-platform/usb_helper"]
pcsc_helper = ["proximate/pcsc_helper"]
nci_helper = ["proximate/nci_helper", "proximate-platform/nci_helper"]
c_ffi = ["secure", "lifecycle", "orchestration"]
nfc_secure_debug = []
asan_tests = []
test_no_catch = []
test_helpers = []

[dev-dependencies]
criterion = "0.8"

[[test]]
name = "cbindgen_diff"
path = "tests/cbindgen_diff.rs"
required-features = ["c_ffi"]

[[test]]
name = "mprotect"
path = "tests/mprotect.rs"
required-features = ["c_ffi"]
