[package]
name = "proximate"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "proximate"

[dependencies]
proximate-platform = { path = "../proximate-platform", default-features = false }
rustix = { version = "1.1", default-features = false, features = ["std", "fs", "event", "termios", "time"] }

[features]
default = ["lifecycle", "orchestration", "usb_helper"]
lifecycle = []
orchestration = ["lifecycle", "proximate-platform/orchestration"]
usb_helper = ["proximate-platform/usb_helper"]
pcsc_helper = ["proximate-platform/pcsc_helper"]
nci_helper = ["orchestration", "proximate-platform/nci_helper"]
# Feature used by the nightly ASan job to compile sanitizer-only tests cleanly.
asan_tests = []
